--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -9,7 +9,7 @@ RUN yum install java -y
 WORKDIR /opt/apache-tomcat-8.5.99
 COPY student.war  webapps/student.war
 COPY context.xml conf/context.xml
-ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/mysql-connector.jar lib/mysql-connector.jar
+COPY mysql-connector.jar lib/mysql-connector.jar
 
 EXPOSE 8080
 
