--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,17 @@
-
 FROM centos:7
 
 LABEL APP="Studentapp"
-
 USER root
 WORKDIR /opt/
-
+RUN curl -O https://downloads.apache.org/tomcat/tomcat-9/v9.0.96/bin/apache-tomcat-9.0.96.tar.gz
+RUN tar -xzvf apache-tomcat-9.0.96.tar.gz 
 RUN yum update -y && \
-    yum install -y curl java-1.8.0-openjdk-devel && \
-    curl -O https://downloads.apache.org/tomcat/tomcat-9/v9.0.96/bin/apache-tomcat-9.0.96.tar.gz && \
-    tar -xzvf apache-tomcat-9.0.96.tar.gz && \
-    rm apache-tomcat-9.0.96.tar.gz
-
+    yum install -y curl java-1.8.0-openjdk-devel
 WORKDIR /opt/apache-tomcat-9.0.96
-
-COPY student.war webapps/student.war
+COPY student.war  webapps/student.war
 COPY context.xml conf/context.xml
 ADD mysql-connector.jar lib/mysql-connector.jar
 
 EXPOSE 8080
 
-CMD ["bin/catalina.sh", "run"]
+CMD ["bin/catalina.sh" , "run"] 
