--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,8 +1,8 @@
-FROM centos:7
+FROM ubuntu:20.04
 LABEL APP="StudentappFE"
 
-RUN yum install httpd -y
+RUN apt-get update && apt-get install -y apache2
 COPY index.html /var/www/html/index.html
 
 EXPOSE 80
-CMD httpd -DFOREGROUND
+CMD ["apache2ctl", "-D", "FOREGROUND"]
