--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,7 +1,15 @@
 FROM ubuntu:20.04
 LABEL APP="StudentappFE"
 
-RUN apt-get update && apt-get install -y apt-utils && apt-get install -y apache2
+# Set the environment variable to avoid interactive prompts
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Update and install packages in one RUN command, then clean up
+RUN apt-get update && \
+    apt-get install -y apt-utils apache2 && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
 COPY index.html /var/www/html/index.html
 
 EXPOSE 80
