--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,19 @@ version : "3.8"
 
 services:
   frontendimg :
-    build: /home/ubuntu/studentapp-3tier-docker-image/frontend
+    build: /home/ubuntu/var/lib/jenkins/workspace/studentapp2/frontend                                                                      // /home/ubuntu/studentapp-3tier-docker-image/frontend
     container_name: frontend
     ports:
     - "9000:80"
     network_mode: bridge
 
   backendimg :
-   build: /home/ubuntu/studentapp-3tier-docker-image/backend
+   build: /home/ubuntu/var/lib/jenkins/workspace/studentapp2/backend                                                                          // /home/ubuntu/studentapp-3tier-docker-image/backend
    container_name: backend
    ports:
    - "8080:8080"
    network_mode: bridge
    depends_on: 
    - "frontendimg"
+
+ 
