--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version : "3.8"
 
 services:
   frontendimg :
-    build: /home/ubuntu/var/lib/jenkins/workspace/studentapp2/frontend                                                                      // /home/ubuntu/studentapp-3tier-docker-image/frontend
+    build: /home/ubuntu/var/lib/jenkins/workspace/studentapp2/frontend                                                                      
     container_name: frontend
     ports:
     - "9000:80"
     network_mode: bridge
 
   backendimg :
-   build: /home/ubuntu/var/lib/jenkins/workspace/studentapp2/backend                                                                          // /home/ubuntu/studentapp-3tier-docker-image/backend
+   build: /home/ubuntu/var/lib/jenkins/workspace/studentapp2/backend                                                                        
    container_name: backend
    ports:
    - "8080:8080"
