--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ USER root
 WORKDIR /opt/
 
 RUN apt-get update && \
-    apt-get install -y curl openjdk-8-jdk && \
+    sudo apt-get install -y curl openjdk-8-jdk && \
     curl -O https://downloads.apache.org/tomcat/tomcat-9/v9.0.96/bin/apache-tomcat-9.0.96.tar.gz && \
     tar -xzvf apache-tomcat-9.0.96.tar.gz && \
     rm apache-tomcat-9.0.96.tar.gz
